--- a/views/index.pug
+++ b/views/index.pug
@@ -8,3 +8,6 @@ else
   form(action="/set-name", method="post")
     input(type="text" placeholder="your name" name="name")
     input(type="submit")
+
+
+pre= JSON.stringify(session, null, 2)
